# ml-api

./: FINAL_REPORT.txt  Makefile  PRODUCTION_FEATURES_SUMMARY.md  PROJECT_SUMMARY.md  QUICK_START.md  README.md  predict_demo.py  pyproject.toml
.github/workflows/: ci.yml
app/: Dockerfile  __init__.py  logging_config.py  main.py  requirements.txt
app/model/: model.pkl
app/schemas/: predict_schema.py
load_test/: README.md  locustfile.py
tests/: __init__.py  conftest.py  test_health.py  test_predict.py
